@@ -840,39 +840,53 @@ static SEXP do_first_min(SEXP call, SEXP op, SEXP args, SEXP rho)
     return ans;
 }
 
-/* which(x) : indices of non-NA TRUE values in x */
+/* which(x) : indices of TRUE values in x (ignores NA) */
 static SEXP do_which(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
     SEXP v, v_nms, ans, ans_nms = R_NilValue;
-    int i, j = 0, len, *buf;
+    int i, j, len;
+    int *vi, *ai;
 
     checkArity(op, args);
     v = CAR(args);
     if (!isLogical(v))
         error(_("argument to 'which' is not logical"));
-    len = LENGTH(v);
-    buf = (int *) R_alloc(len, sizeof(int));
 
-    for (i = 0; i < len; i++) {
-        if (LOGICAL(v)[i] == TRUE) {
-            buf[j] = i + 1;
-            j++;
+    len = LENGTH(v);
+    ans = allocVector (INTSXP, len);
+    vi = LOGICAL(v);
+    ai = INTEGER(ans);
+    j = 0;
+
+    if (len > 0) {
+        i = 0;
+        if (len & 1) {
+            if (vi[i++] > 0) ai[j++] = i;
+        }
+        if (len & 2) {
+            if (vi[i++] > 0) ai[j++] = i;
+            if (vi[i++] > 0) ai[j++] = i;
+        }
+        while (i < len) {
+            if (vi[i++] > 0) ai[j++] = i;
+            if (vi[i++] > 0) ai[j++] = i;
+            if (vi[i++] > 0) ai[j++] = i;
+            if (vi[i++] > 0) ai[j++] = i;
         }
     }
 
     len = j;
-    PROTECT(ans = allocVector(INTSXP, len));
-    memcpy(INTEGER(ans), buf, sizeof(int) * len);
+    PROTECT (ans = reallocVector(ans,len));
 
-    if ((v_nms = getAttrib(v, R_NamesSymbol)) != R_NilValue) {
+    if ((v_nms = getNamesAttrib(v)) != R_NilValue) {
         PROTECT(ans_nms = allocVector(STRSXP, len));
         for (i = 0; i < len; i++) {
-            SET_STRING_ELT(ans_nms, i,
-                           STRING_ELT(v_nms, INTEGER(ans)[i] - 1));
+            SET_STRING_ELT (ans_nms, i, STRING_ELT(v_nms,ai[i]-1));
         }
         setAttrib(ans, R_NamesSymbol, ans_nms);
         UNPROTECT(1);
     }
+
     UNPROTECT(1);
     return ans;
 }
